eureka: supports credentials in EUREKA_SERVICE_URL
This adds support for credentials embedded in `EUREKA_SERVICE_URL` user
info, as is typically done in spring cloud.

Fixes #3697

Signed-off-by: Adrian Cole <adrian@tetrate.io>